fixing media query for skills bubbles - horizontal scrolling

--- a/style.scss
+++ b/style.scss
@@ -227,9 +227,6 @@ path{
   .contactContainer{
     right: 0%;
   }
-//   .projectContainer{
-//     // box-shadow: -5px 0px 25px -15px;
-//   }
   .projectContainer div, .contactContainer div{
     top: 50%;
     position: relative;
@@ -285,7 +282,7 @@ path{
     display: inline-block;
     font-weight: 900;
     transition: all 1s cubic-bezier(0.49, -0.19, 0.32, 0.88);  
-    width: .5vw;
+    width: 1.5vw;
   }
 
   .projectContainer:hover > div > .widerText ,  .contactContainer:hover > div > .widerText,   .skillsContainer:hover > div > .widerText2 ,  .aboutContainer:hover > div > .widerText2 {
@@ -330,15 +327,9 @@ path{
   left: 0vh ;
   overflow: hidden;
 }
-.skillsPageContainer{
-  width: calc(100vw - 20vh);
-  height: 80vh;
-  background-color: $bkcolor;
-  position: relative;
-  top: 10vh;
-  left: 10vh ;
-  overflow: hidden;
-}
+// .skillsPageContainer{
+//   position: relative;
+// }
 .projectPageContainer > p , .contactPageContainer> p, .aboutPageContainer > p, .skillsPageContainer > p{
   color: $bkcolor;
   font-size: 2rem;
@@ -535,12 +526,17 @@ path{
   left: 0%;
   width: 100vw;
   height: 90vh;
+  overflow: hidden;
 }
 .skillsGrid1{
   flex: 1;
-  width: 50%;
   height: 100%;
   background-color: $acntcolor;
+  box-sizing: border-box;
+  padding: 2%;
+    .leftarrow, .rightarrow{
+        display: none;
+    }
 }
 .allSkillsContainer{
   flex: 1;
@@ -552,10 +548,10 @@ path{
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 2% 0%;
+  box-sizing: border-box;
 }
 .skillsGrid2{
   flex: 2;
-  width: 50%;
   height: 100%;
 }
 .skillsGrid2 > div{
@@ -910,11 +906,6 @@ text-align: center
     .pageIndicator{
         width: 8vw;
     }
-    .allskills{
-        min-width: 20vw;
-        min-height: 20vw;
-        margin: 10%;
-    }
 
     .imgContainer{
         flex: 4;
@@ -944,6 +935,58 @@ text-align: center
     .projectDetailContainer{
         flex-direction: column;
     }
+
+    .skillsPageContainer {
+        flex-direction: column;
+        .skillsGrid1 {
+            width: 100%;
+            height: 30%;
+            flex-direction: row;
+            display: flex;
+            .leftarrow, .rightarrow{
+                display: inline-block;
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                height: fit-content;
+                flex: 1;
+                text-align: center;
+                font-size: 1.5rem;
+                color: #0f1214;
+            }
+
+            .allSkillsContainer {
+                flex: 10;
+                align-items: center;
+                flex-wrap: nowrap;
+                justify-content: flex-start;
+                align-self: center;
+                overflow: scroll;
+                padding: 2%;
+
+                .allskills{
+                    min-width: calc(100vw/8);
+                    min-height: calc(100vw/8);
+                    margin: 5%;
+                }
+                .skills8:after{
+                    content: ' ';
+                    clear: both;
+                    position: absolute;
+                    right: 0;
+                    width: 2px;
+                    height: 100%;
+                }
+            }
+        }
+        .skillsGrid2{
+            flex: 1;
+            width: 100%;
+            height: 70%;
+        }
+    }
+
+
 
 }
 
